site da joyce, sobre stranger things

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
 		<li> eddie munson</li>
 		<li>robin </li>
 		<li>Dustin</li>
-		<a></a>
+		<a href="https://www.youtube.com/watch?v=zOYN3GqWIwA&t=33s">Stranger Things Resumo da Série (Temporada 1 a 3) </a>
+	<a href="https://www.youtube.com/watch?v=hiuAq5QG3zA">Stranger Things 4 Resumo & Explicação</a>
+	
 	</ol>
 
 </body>
